--- a/directors-cut.html
+++ b/directors-cut.html
@@ -1640,7 +1640,7 @@
 					<h3>Sixth Normal Form</h3>
 					
 					<blockquote>
-						Relvar R is in Sixth Normal Form (6NF) if and only if all join depdenencies which hold in R are trivial.
+						Relvar R is in Sixth Normal Form (6NF) if and only if all join dependencies which hold in R are trivial.
 					</blockquote>
 					
 					<p class="fragment">In other words, there may be one non-key attribute in addition to the key.</p>
